# projectm

./: .appveyor.yml  .clang-format  .clang-tidy  .directory  .git.sh.swp  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AUTHORS.txt  BUILDING-cmake.md  BUILDING.md  BUILDING_LINUX.txt  BUILDING_OSX.txt  BUILD_ENHANCEMENTS.md  CHANGES.md  CMakeLists.txt  CMakePresets.json  COPYING  COPYING.txt  DETAILED_AUDIT_REPORT.md  EMSCRIPTEN.md  FAQ.txt  INSTALL-iTunes-macos.txt  LLVM_README.md  MILK_PRESET_GUIDE.md  Makefile  Makefile.am  Makefile.dist  MilkDrop Preset Authoring - Winamp Developer Wiki.html  PRESET_DIR_CONFIG.md  README.md  Sampler  - SDLprojectM_Run2.csv  TODO.txt  WRITING_NEW_MILK_PRESETS_GUIDE.md  a.out.js  a.out.wasm  autogen.sh  ax_qt_main.cpp  ax_qt_test.h  (+45 more)
libvisual-projectM/: ChangeLog  actor_projectM.c  configure.ac  lvtoprojectM.h
presets/: CMakeLists.txt  Flexi - smashing fractals [acid etching mix].milk  Geiss & Sperl - Feedback (projectM idle HDR mix).prjm~  Geiss - Julia Fractal 2.milk  M.tga  Rovastar & Sperl - Tuxflower.prjm  Rovastar - Xeper.milk  mstress - Acid Universes.milk
presets/new/: preset1.milk
presets/presets-En_D/: Fumbling_Foo + En D, Martin - The Lifeforce of the music v4a.milk  Fumbling_Foo__En_D_Martin_-_The_Lifeforce_of_the_music_v5.milk  Fumbling_Foo__En_D_Martin_-_The_Lifeforce_of_the_music_v6b.milk
presets/presets_bltc201/: Aderrasi + Geiss - Airhandler (Kali Mix) - Painterly Kaleidoscope 2.milk  Aderrasi - Bitterfeld (Crystal Border Mix).milk  Aderrasi - Bow To Gravity.milk  Aderrasi - Brakefreak-bitcore tweak.milk  Aderrasi - Contortion (Escher's Tunnel Mix).milk  Aderrasi - Ert (Wary Mix).milk  Aderrasi - Ghast Entity.milk  Aderrasi - Halls Of Centrifuge.milk  Aderrasi - Kevlar Abyss.milk  Aderrasi - Songflower (Hybrid Plant).milk  Aderrasi - Songflower (Moss Posy).milk  Aderrasi - What cannot be.milk  Bmelgren & Krash - Rainbow Orb Peacock (Lonely Signal Gone Mad Mix).milk  Bmelgren - Acid Iris.milk  Bmelgren - Pentultimate Nerual Slipstream (Tweak 2).milk  BrainStain-Blackwidow.milk  EMPR - Random - They're so cute, Dad can I keep one!.milk  Eo.S - random 06B.milk  Eo.S. + Geiss - glowsticks v2 03 music shifter edit b (water mix).milk  Eo.S. + Phat - CAT Scan (Nirvana flux).milk  Eo.S. + Phat - CAT Scan.milk  Eo.S. + Phat - Emergent factors.milk  Eo.S. + Phat - chasers 14 sentinel 616.milk  Eo.S. + Phat - cubetrace - v2.milk  Eo.S. + Phat - the lights at night_spikes.milk  Eo.S. + Phat - vacuum deity watching you.milk  Eo.S. + Phat - vacuum portal.milk  Eo.S. + Phat - zen prophetmind WTF is it_v2 - Bitcore Tweak.milk  Eo.S. + Zylot - skylight (Stained Glass Majesty mix).milk  Eo.S. - ddg_phat_mix - Bitcore Tweak.milk  Eo.S. - glowsticks v2 03 music shifter edit b.milk  Eo.S. - glowsticks v2 05 and proton lights (+Krash's beat code) _Phat_remix02b.milk  Eo.S. - glowsticks v2 05 and proton lights (+Krash's beat code) _Phat_remix07.milk  Eo.S. - heater core C_Phat's_class + sparks_mix.milk  Eo.S. - nematodes E daemon.milk  Eo.S. - pointfield 04 arcs demon_phat edit_v3.milk  Eo.S. - skylight a1 [music warp switch].milk  Eo.S. - tumbler demon mix high fps Phat_edit.milk  Eo.S. planetfunk-04 - trip1_phat_edit_4 - EoS_Gears_mix.milk  Eo.S.+Phat - Flare_dig_mix.milk  (+218 more)
presets/presets_community/: !!!---Flexi - piercing - pastel - 3d.milk  !!!---flexi + amandio c - organic11.milk  !!!---flexi + amandio c - organic12-3d3.milk  !!!---flexi + amandio c - organic12-3d4.milk  !!!---flexi + amandio c - organic3.milk  !!!---flexi + amandio c - organic4-columns.milk  !!!---flexi + amandio c - organic5.milk  !!!---flexi + amandio c - organic6.milk  !!!---flexi + amandio c - organic7 the specular limit.milk  !!!---flexi + amandio c - organic7.milk  !!!---flexi - target practice two weeks of cash ferguson 50 year debt party.milk  !!!---flexi - target practice two weeks of cash metzger hypertechnological idiocrats.milk  !!!---flexi - target practice two weeks of cash metzger.milk  !!!---flexi - target practice two weeks of cash plausibility of ngargumeaint.milk  !!!---flexi - target practice two weeks of cash the broken cogs of capitalgasm.milk  !!!---flexi - target practice two weeks of cash.milk  !!!---flexi - target practice-2 3.14-u by xerath cu-blu bu-clu gu-brd cd-gru bd-crd gd-clu.milk  !!!---flexi - target practice-2 3.14-u by xerath.milk  !!!---flexi - target practice-2 manifest hypocritical pretention by xerath boil peniles.milk  !!!---flexi - target practice-2.milk  !!!---flexi - target practice-3-liquid lush.milk  !!!---flexi - target practice-4-digi tech.milk  !!!---flexi - target practice-4-digi techgreen brown.milk  !!!---flexi - target practice-4-digi techpinkblue.milk  !!!---flexi - target practice-5-liquid-2-twitch.milk  !!!---flexi - target practice-5-liquid-2.milk  !!!---flexi - target practice-5-liquid.milk  !!!---flexi - target practice.milk  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX .milk  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX A.mil  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX B.mil  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX B.milk  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX D.milk  !Reaching New HighFX - Martin - Foggy Notation - Ft AdamFX - Yin -  Phat -  Eos - MilkDrop InsideOutFX Ft Orb .milk  !mU$-- Zylot - DISCO INFERNO (un-solid floor).milk  (+26711 more)
src/: .gitignore  CMakeLists.txt  EyeTune.WindowsUniversal.Application.sln  Makefile  Makefile.am  Makefile.dist  README  cmake_install.cmake  publish.sh  publish_eyetune.bat  publish_eyetune.sh  publish_eyetune_build.sh
tests/: CMakeLists.txt  ChangeLog  FileParserTest.cpp  projectM-test-memleak.cpp  projectM-test-texture.cpp  projectM-test.cpp  projectM-unittest.cpp  video_init.cpp
xmms-projectM/: Makefile.am  config.h.in  configure.ac  main.c  video_init.c  video_init.h
(+32482 files in other folders)
